<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        android:layout_marginBottom="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="fitXY"
                android:id="@+id/pizza"
                android:src="@drawable/pizza"
                android:layout_margin="5dp"
                android:layout_height="250dp">
            </ImageView>

            <TextView
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/up_to_70_off"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textSize="12sp"
                android:id="@+id/off"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="@id/pizza"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/free_delivery"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/pizza"
                app:layout_constraintTop_toBottomOf="@id/off"/>

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/_25_nmin"
                android:textSize="12sp"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/pizza"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pizza"
                app:layout_constraintStart_toStartOf="@id/pizza"
                android:text="@string/cheezious"
                android:textSize="16sp"
                android:id="@+id/resname"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintEnd_toStartOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/pizza"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@id/pizza"
                app:layout_constraintEnd_toEndOf="@id/pizza"
                android:text="@string/_4_1"
                android:id="@+id/rating"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginRight="5dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/resname"
                app:layout_constraintStart_toStartOf="@id/resname"
                android:textSize="14sp"
                android:layout_marginTop="2dp"
                android:id="@+id/details"
                android:text="@string/pakistani_pizza_cheeziious"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details"
                app:layout_constraintStart_toStartOf="@id/pizza"
                android:text="@string/rs_75"
                android:textSize="14sp"
                android:id="@+id/rupees"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details"
                app:layout_constraintStart_toEndOf="@id/rupees"
                android:text="@string/minimum"
                android:textSize="14sp"
                android:id="@+id/minimum"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details"
                app:layout_constraintStart_toEndOf="@id/minimum"
                android:text="|"
                android:id="@+id/seprator"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details"
                app:layout_constraintStart_toEndOf="@id/seprator"
                android:text="@string/free"
                android:textSize="14sp"
                android:id="@+id/free"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details"
                app:layout_constraintStart_toEndOf="@id/free"
                android:text="@string/delivery"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>